--- a/index.html
+++ b/index.html
@@ -11,35 +11,35 @@
 </head>
 <body>
   <main>
-	   <div class="login .col-12">
+	   <div class="login .col-12 col-md-12">
           <a href="http://www.dado.ng">SIGN IN </a>
           <a href="http://www.dado.ng"> CREATE ACCOUNT</a>
        </div>
        
        <header class="row">
-           <div class="logo col-3 col-sm-6">
+           <div class="logo col-sm-3 col-sm-6 col-md-3 col-lg-3 col-xl-3">
              <img src="images/mamaify-logo1.jpeg">
            </div>
-           <div class="navbox col-9 col-sm-6">
+           <div class="navbox col-9 col-sm-6 col-md-9 col-lg-9 col-xl-9">
 	          <ul class="nav">
-	             <li><a href="htps://www.food.com"> Home </a> </li>
-	             <li><a href="htps://www.food.com"> Cart </a> </li>
-	             <li><a href="htps://www.food.com"> About </a> </li>
-	             <li><a href="htps://www.food.com"> Contact </a> </li>
-	             <li><a href="htps://www.food.com"> Order Now </a> </li>
+	             <li><a href="#"> Home </a> </li>
+	             <li><a href="#"> Cart </a> </li>
+	             <li><a href="#"> About </a> </li>
+	             <li><a href="#"> Contact </a> </li>
+	             <li><a href="#"> Order Now </a> </li>
 	          </ul>
           </div>
        </header>
 
        <section class="banbox">
            <div id="cover">
-	         <div class="banner">
-		        <h1> @ MAMA IFY </h1>
-		        <p> Enjoy tasty meals,<br> that feels like home</p>
-	         </div>
-	         <div class="link">
-	          <a href="#...">ORDER NOW</a>
-             </div> 
+	            <div class="banner">
+		            <h1> @ MAMA IFY </h1>
+		            <p> Enjoy tasty meals,<br> that feels like home</p>
+	            </div>
+	            <div class="link">
+	               <a href="#">ORDER NOW</a>
+              </div> 
            </div>
       </section>
 
@@ -51,19 +51,19 @@
           </div>
 
          <div class=" row flex">
-	         <div class="font1 col-4">
+	         <div class="font1 col-4 col-sm-6 col-md-4 col-lg-4">
 	             <a href="">  <i class="fa-solid fa-map-location-dot" style="font-size: 90px; color: rgb(45,11,1);"></i>
 	              <h3> Select nearest location </h3> </a>
 	              <p>Select the closest location/land-mark <br> to you for delivery</p>
 	         </div>
 
-              <div class="font1 col-4">
+              <div class="font1 col-4 col-sm-6 col-md-4 col-lg-4">
 	             <a href=""><i class="fa-solid fa-utensils" style="font-size: 90px; color: rgb(45,11,1);" ></i>
 	             <h3> Choose your meal </h3> </a>
 	              <p> Place your order by choosing from the<br> numerous delicacies on our menu </p>
 	          </div>
 
-              <div class="font1 col-4">
+              <div class="font1 col-4 col-sm-12 col-md-4 col-lg-4">
                  <a href=""> <i class="fa-solid fa-person-biking" style="font-size: 50px; color: rgb(45,11,1);"> </i> <br>
                  <i class="fa-solid fa-house-circle-check" style="font-size: 50px; color: rgb(45,11,1);"></i>
                   <h3>Enjoy your meal</h3> </a>
@@ -75,32 +75,32 @@
 
 
         <section class="menu row">
-              <div class="food col-4">
+              <div class="food col-4 col-sm-6 col-md-4 col-lg-4">
               	 <img src="images/egusi.png"> 
                  <h2> Egusi + Semo + 2Beef </h2> 
                   <p style="font-size: 20px;"><strong> &#8358;1200 </strong></p>
               </div>
-        	 <div class="food col-4">
+        	 <div class="food col-4 col-sm-6 col-md-4 col-lg-4">
               	 <img src="images/rice-stew.jpg"> 
                  <h2> Rice + Stew + 2beef </h2> 
                    <p style="font-size: 20px;"><strong> &#8358;1200 </strong></p> 
               </div>
-        	 <div class="food col-4">
+        	 <div class="food col-4 col-sm-6 col-md-4 col-lg-4">
               	 <img src="images/beans.jpg"> 
                  <h2> Beans </h2> 
                    <p style="font-size: 20px;"><strong> &#8358;600 </strong></p> 
               </div>
-        	 <div class="food col-4">
+        	 <div class="food col-4 col-sm-6 col-md-4 col-lg-4">
               	 <img src="images/fiofio.jpg"> 
                  <h2> Fio-Fio + Fish </h2> 
                  <p style="font-size: 20px;"><strong> &#8358;1750 </strong></p> 
               </div>
-        	 <div class="food col-4">
+        	 <div class="food col-4 col-sm-6 col-md-4 col-lg-4">
               	 <img src="images/bitterleaf.jpeg"> 
-                 <h2> Bitterleaf Soup (2 Liter) </h2> 
+                 <h2> Bitterleaf Soup </h2> 
                   <p style="font-size: 20px;"><strong> &#8358;4000 </strong></p>
               </div>
-        	 <div class="food col-4">
+        	 <div class="food col-4 col-sm-6 col-md-4 col-lg-4">
               	 <img src="images/beef.png"> 
                  <h2> Fried Goat Meat </h2> 
                  <p style="font-size: 20px;"><strong> &#8358;2000 </strong></p> 
@@ -134,8 +134,8 @@
  
         <aside>
             <div class="copy">
-	           <p>&copy;2022 Quality is our Recipe, LLC.</p>
-	       </div>
+	             <p>&copy;2022 Quality is our Recipe, LLC.</p>
+	          </div>
        </aside>
 
   </main>
