--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
            </div>
            
 	          <ul class="nav col-9 col-sm-9 col-md-9 col-lg-9 col-xl-9">
-	             <li><a href="index.html"> Home </a> </li>
+	             <li><a href="https://cornbeef111.github.io/first-food-webpage/"> Home </a> </li>
 	             <li><a href="https://cornbeef111.github.io/first-food-webpage-cart/"> Cart </a> </li>
 	             <li><a href="#"> About </a> </li>
 	             <li><a href="#"> Contact </a> </li>
