just littel adjustment

--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
         </section>
             
           <section id="secsec" class="row">
-              <div class="photo psize"> 
+              <div class="psize"> 
+                 <div class="photo"></div>
               </div>
 
               <div id="first" class=>
