mobile second change

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                  <!-- the above div is for the first image -->
             </div>
             <div class="col-sm-12 foodsection">
-                 <h2> Egusi + Semo + 2Beef </h2>
+                 <h2> Egusi + Semo </h2>
                  <p> Well prepared egusi soup with beef and two well pounded semovita </p>
                  <span class="badge">  <i class="fa-regular fa-star"></i> 3.1</span>
                   <p class="para"> <strong> &#8358;1200.00 </strong> </p> 
@@ -85,7 +85,7 @@
                       <!-- this is for the second food image -->
             </div>
              <div class="col-sm-12 foodsection">
-                      <h2> Rice + Stew + 2beef </h2>
+                      <h2> Rice + Stew </h2>
                       <p> Well prepared egusi soup with beef and two well pounded semovita </p>
                       <span class="badge">  <i class="fa-regular fa-star"></i> 4.5</span>
                       <p class="para"><strong> &#8358;1200.00 </strong></p> 
@@ -269,7 +269,6 @@
                <i class="fa-brands fa-square-instagram"></i>
                <i class="fa-brands fa-twitter"></i>
                <i class="fa-brands fa-facebook-f"></i>
-               <i class="fa-brands fa-discord"></i>
            </div>
           </div>
         </footer>
@@ -281,3 +280,5 @@
      <script type="text/javascript" src="mobile-project.js"></script>
 </body>
 </html>
+
+
