mobile change i forgot

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                <p>&copy;2022 Quality is our Recipe, LLC.</p>
             </div>
        </aside>
-     <script type="text/javascript" src="mobile-project.js"></script>
+     <script type="text/javascript" src="first-project.js"></script>
 </body>
 </html>
 
