--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/grid.css">
     <link rel="stylesheet" type="text/css" href="css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="css/query.css">
     <link rel="stylesheet" type="text/css" href="css/media480max.css">
+    <link rel="stylesheet" type="text/css" href="css/media481min.css">
   <title>Mama Ify mobile</title>
 </head>
 <body>
@@ -15,11 +17,11 @@
          <a href="http://www.dado.ng"> CREATE ACCOUNT</a>
     </div>
     <header class="row">
-      <div id="loogo" class="col-sm-3">
+      <div id="loogo" class="col-sm-3 col-xl-3">
          <img src="images/mamaify-logo1.jpeg">
       </div>
 
-      <div class="col-sm-9">
+      <div class="col-sm-9 col-xl-9">
         <nav id="fornav">
           <ul>
                    <li><a href="https://cornbeef111.github.io/first-food-webpage/"> Home </a> </li>
@@ -48,88 +50,88 @@
         </div>
       </section>
       <section class="first row">
-           <aside class="intro col-sm-12">
+           <aside class="intro col-sm-12 col-md-12 col-lg-12 col-xl-12">
                <h2> How It Works </h2>
            </aside>
-             <div class="font1 col-sm-6">
+             <div class="font1 col-sm-6 col-md-6 col-lg-4 col-xl-4">
                  <a href="">  <i class="fa-solid fa-map-location-dot" style="font-size: 60px; color: rgb(45,11,1);"></i> <h3> Select nearest location </h3> </a>
               <p>Select the closest location/land-mark <br> to you for delivery</p>
              </div>
-             <div class="font1 col-sm-6">
+             <div class="font1 col-sm-6 col-md-6 col-lg-4 col-xl-4">
                <a href=""><i class="fa-solid fa-utensils" style="font-size: 60px; color: rgb(45,11,1);" ></i>
                <h3> Choose your meal </h3> </a>
                 <p> Place your order by choosing from the<br> numerous delicacies on our menu </p>
            </div>
-            <div class="font1 col-sm-12">
-                 <a href=""> <i class="fa-solid fa-person-biking" style="font-size: 50px; color: rgb(45,11,1);"> </i> <br>
-                 <i class="fa-solid fa-house-circle-check" style="font-size: 50px; color: rgb(45,11,1);"></i>
+            <div class="font1 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+                 <a href=""> <i class="fa-solid fa-person-biking" style="font-size: 30px; color: rgb(45,11,1);"> </i> <br>
+                 <i class="fa-solid fa-house-circle-check" style="font-size: 30px; color: rgb(45,11,1);"></i>
                   <h3>Enjoy your meal</h3> </a>
                  <p>Pick up your tasty meal from the store or <br>have it delivered to you</p>
              </div>
-              <p class="mid"> We use cookies and various web tracking technologies to personalise contect and ads, <a href=""> read more</a></p>
+              <p class="mid col-sm-12 col-md-12 col-lg-12 col-xl-12"> We use cookies and various web tracking technologies to personalise contect and ads, <a href=""> read more</a></p>
       </section>
         <section class="row" id="foodsectionpad">
-          <div class="foodd col-sm-12">
+          <div class="foodd col-sm-12 col-md-6 col-lg-3 col-xl-3">
                  <div class="food1 forFood"> </div>
                  <!-- the above div is for the first image -->
             </div>
-            <div class="col-sm-12 foodsection">
+            <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3 foodsection">
                  <h2> Egusi + Semo </h2>
                  <p> Well prepared egusi soup with beef and two well pounded semovita </p>
                  <span class="badge">  <i class="fa-regular fa-star"></i> 3.1</span>
                   <p class="para"> <strong> &#8358;1200.00 </strong> </p> 
                   <a href="#" class="btn">ORDER NOW </a>
             </div>
-            <div class="foodd col-sm-12">
+            <div class="foodd col-sm-12 col-md-6 col-lg-3 col-xl-3">
                   <div class="food2 forFood"></div> 
                       <!-- this is for the second food image -->
             </div>
-             <div class="col-sm-12 foodsection">
+             <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3 foodsection">
                       <h2> Rice + Stew </h2>
                       <p> Well prepared egusi soup with beef and two well pounded semovita </p>
                       <span class="badge">  <i class="fa-regular fa-star"></i> 4.5</span>
                       <p class="para"><strong> &#8358;1200.00 </strong></p> 
                       <a href="#" class="btn">ORDER NOW </a>
              </div>
-             <div class="foodd col-sm-12">
+             <div class="foodd col-sm-12 col-md-6 col-lg-3 col-xl-3">
                  <div class="food3 forFood"></div> 
                  <!-- this is for the 3rd food image -->
              </div>
-             <div class="col-sm-12 foodsection">
+             <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3 foodsection">
                  <h2> Beans </h2> 
                  <p> Well prepared egusi soup with beef and two well pounded semovita </p>
                  <span class="badge">  <i class="fa-regular fa-star"></i> 3.0</span>
                   <p style="font-size: 20px;"><strong> &#8358;600.00 </strong></p> 
                   <a href="#" class="btn">ORDER NOW </a>
              </div>
-             <div class="foodd col-sm-12">
+             <div class="foodd col-sm-12 col-md-6 col-lg-3 col-xl-3">
                  <div class="food4 forFood"></div>
                  <!-- this is for the 4th food -->
              </div>
-             <div class="col-sm-12 foodsection">
+             <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3 foodsection">
                  <h2> Fio-Fio + Fish </h2> 
                  <p> Well prepared egusi soup with beef and two well pounded semovita </p>
                  <span class="badge">  <i class="fa-regular fa-star"></i> 4.0</span>
                  <p class="para" "><strong> &#8358;1750.00 </strong></p> 
                  <a href="#" class="btn">ORDER NOW </a>
               </div>
-              <div class="foodd col-sm-12">
+              <div class="foodd col-sm-12 col-md-6 col-lg-3 col-xl-3">
                <div class="food5 forFood"></div>
                <!-- this is for 5th food image -->
             </div>
-            <div class="col-sm-12 foodsection">
-               <h2> Bitterleaf Soup </h2>
+            <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3 foodsection">
+               <h2> Bitterleaf</h2>
                <p> Well prepared egusi soup with beef and two well pounded semovita </p>
                 <span class="badge">  <i class="fa-regular fa-star"></i> 5.0</span> 
                 <p class="para"><strong> &#8358;4000.00 </strong></p>
                 <a href="#" class="btn">ORDER NOW </a>
               </div>
-              <div class="foodd col-sm-12">
+              <div class="foodd col-sm-12 col-md-6 col-lg-3 col-xl-3">
                  <div class="food6 forFood"></div>
                  <!-- this is for the 6th food image -->
               </div>
-              <div class="col-sm-12 foodsection">
-                 <h2> Fried Goat Meat </h2>
+              <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3 foodsection">
+                 <h2> Goat Meat </h2>
                   <p> Well prepared egusi soup with beef and two well pounded semovita </p>
                   <span class="badge">  <i class="fa-regular fa-star"></i> 5.5</span>
                  <p class="para"> <strong> &#8358;2000.00 </strong> </p>
@@ -161,7 +163,7 @@
                                </select>
                         </form>
                       </div> -->
-                      <div>
+                      <div class="selectpad">
                         <form class="sideselect2">
                             <label class="">Select Delivery District</label><br>
                               <select class="">
@@ -243,8 +245,8 @@
         </div>
         <footer>
           <div class="footerimg row">
-             <p class="para2">In our restuarant, we strive to give you the best of locally made meals We are family and family look after one another.</p>
-            <div class="footlist col-sm-6">
+             <p class="para2 col-md-12 col-lg-12 col-xl-12">In our restuarant, we strive to give you the best of locally made meals We are family and family look after one another.</p>
+            <div class="footlist col-sm-6 col-md-6 col-lg-6 col-xl-6">
             <ul>
              <li><a href=""> <i class="fa-solid fa-angles-right"></i> &nbsp;Gift Card</a></li>
              <li><a href=""> <i class="fa-solid fa-angles-right"></i> &nbsp; Contact</a></li>
@@ -252,7 +254,7 @@
              <li><a href=""> <i class="fa-solid fa-angles-right"></i> &nbsp;Blog</a></li>
             </ul>
           </div>
-           <div class="footlist col-sm-6">
+           <div class="footlist col-sm-6 col-md-6 col-lg-6 col-xl-6">
            <ul>
              <li><a href=""> <i class="fa-solid fa-angles-right"></i> &nbsp;Site map </a></li>
              <li><a href=""> <i class="fa-solid fa-angles-right"></i> &nbsp;Tracking</li></a>
@@ -260,12 +262,12 @@
              <li><a href=""> <i class="fa-solid fa-angles-right"></i> &nbsp;Terms and Condt.</li></a>
                </ul>
            </div>
-           <div class="col-sm-9">
+           <div class="col-sm-9 col-md-9 col-lg-9 col-xl-9">
              <i class="fa-solid fa-location-dot below"> &nbsp;132 New Design STR,Australia </i>
                  <i class="fa-solid fa-phone below"> &nbsp;(234) 810-392-8104, 902-176-7322 </i>
                  <i class="fa-solid fa-envelope below"> &nbsp;edembaonyekachi@ymail.com</i>
            </div>
-           <div class="col-sm-3 move">
+           <div class="col-sm-3 col-md-3 col-lg-3 col-xl-3 move">
                <i class="fa-brands fa-square-instagram"></i>
                <i class="fa-brands fa-twitter"></i>
                <i class="fa-brands fa-facebook-f"></i>
